--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-validator": "^7.0.1",
     "handlebars": "^4.7.7",
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
